# Awesome-Text2GQL

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.json  generalize_llm.py  generate_dataset.py  generator.py  prompt_generator.py  pyproject.toml  query.txt  requirements.txt  run.sh  setup.py
base/: Config.py  CypherBase.py  Expr.py  GenQuery.py  Parse.py  Pattern.py  Schema.py  TransVisitor.py
chatbot_demo/: demo.py  demo.sh
cypher/: LcypherLexer.py  LcypherListener.py  LcypherParser.py  LcypherVisitor.py  Lcypher_generator.g4
cypher_template/: query_template.txt
data/: common_raw_query.txt  movie_raw_query.txt  text2gql_train.json  threebofy_raw_query.txt
demo/: README.md  RPC_Client.py  demo.py  lgraph.json  rpc_client.py  run_server.sh
examples/: cypher2gql.py  english_to_chinese.py  example_dataset.json  generalize_corpus_cypher.py  generalize_corpus_dataset_cypher.py  generalize_corpus_dataset_gql.py  generalize_corpus_gql.py  generate_corpus.py  generate_corpus_new.py  generate_data.py  generate_schema.py  print_ast.py  temp.py
input_examples/: corpus.txt  gen_question_llm.txt  query_only.txt  query_template.txt
llm_examples/: GENERALIZATION.txt  GENERAL_PROMPT_DIRECTLY.txt  GEN_PROMPT_DIRECTLY.txt
llm_process/: PostProcess.py  PreProcess.py  Status.py
output/: output_prompt.txt  output_query.txt  text2gql_train.json
scripts/: gen_prompt_with_template_llm.sh  gen_query.sh  gen_question.sh  gen_question_directly_llm.sh  gen_question_with_template_llm.sh  general_questions_directly_llm.sh  generalize_llm.sh  generate_dataset.sh  run_the_whole_flow.sh  run_the_whole_process.sh
test/: test_cypher.py
utils/: Cypher2Dot.py  CypherStream.py  GrammarCheck.py  and.py  clean.py  (+1 more)
(+111 files in other folders)
